@@ -76,12 +76,14 @@
       <class name="test.annotationtransformer.AnnotationTransformerTest" />
       <class name="test.configuration.MultipleBeforeGroupTest" />
       <class name="test.configuration.BaseGroupsTest" />
+      
 <!--
       <class name="test.jar.JarTest" />
 -->
       <class name="test.xml.XmlVerifyTest" />
       <class name="test.invokedmethodlistener.InvokedMethodListenerTest" />
       <class name="test.testng249.VerifyTest"/>
+      <class name="test.testng195.AfterMethodTest" />
     </classes>
   </test>
   
